src/test/ui/consts/const-multi-ref.stderr
error[E0764]: mutable references are not allowed in constants
  --> $DIR/const-multi-ref.rs:6:13
   |
LL |     let p = &mut a;
   |             ^^^^^^ `&mut` is only allowed in `const fn`

error[E0492]: cannot borrow a constant which may contain interior mutability, create a static instead
  --> $DIR/const-multi-ref.rs:16:13
   |
LL |     let p = &a;
   |             ^^

error: aborting due to 2 previous errors

Some errors have detailed explanations: E0492, E0764.
For more information about an error, try `rustc --explain E0492`.
